2006-09-10  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Dov Grobgeld <dov dot grobgeld at gmail dot com>

	* configure.ac:
	* examples/Makefile.am:
	* examples/xmlrpc/.cvsignore:
	* examples/xmlrpc/Makefile.am:
	* examples/xmlrpc/README:
	* examples/xmlrpc/test-xmlrpc-client.c:
	* examples/xmlrpc/test-xmlrpc-server.c:
	* examples/xmlrpc/xmlrpc-client.c:
	* examples/xmlrpc/xmlrpc-server.c:
	* examples/xmlrpc/xmlrpc.h:
	  Add Dov Grobgeld's XMLRPC code to the examples for posteriority.

2006-09-03  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Thadeu Lima de Souza Cascardo <cascardo at minaslivre org>

	* src/inetaddr.c: (gnet_gethostbyname), (gnet_inetaddr_new),
	(gnet_inetaddr_new_list), (gnet_inetaddr_new_list_async),
	(inetaddr_new_list_async_nonblock_dispatch),
	(inetaddr_new_list_async_gthread):
	  Check whether the given hostname can be resolved without
	  blocking before creating a thread or forking to do the
	  lookup. Avoids unnecessary overhead in some cases (#353727).

	* tests/unpack_test.c: (main):
	  Add cast for unsigned integers to avoid compiler warnings here.

2006-08-12  Tim-Philipp Müller  <tim at centricular dot net>

	* RELEASE:
	  Add note to check for ss_family usage before release.

	* src/inetaddr.c: (hostent2ialist),
	(gnet_inetaddr_new_list_async_cb):
	  Don't access the ss_family field directly, use the
	  GNET_SOCKADDR_FAMILY() accessor macro instead in
	  order to keep tings compiling on older systems.
	  Patch by: Mark Drago <mdrago at bascom com>

2006-06-23  Tim-Philipp Müller  <tim at centricular dot net>

	* autogen.sh:
	  Find newer automake/autoconf versions and use those if
	  available.

2006-05-24  Benjamin Otte  <in7y118@public.uni-hamburg.de>

	* src/gnet-private.h:
	  add lost stuff for !win32 from previous patch
	* tests/conn_http_test.c: (main):
	  remove windows-specific debugging stuff
	* tests/unpack_test.c: (main):
	  fix "comparison always true due to limited range of data type"